--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,8 @@
   box-sizing: border-box
 }
 
-html{
-  margin:0;
-  min-height: 100vh;
+.nowrap {
+  white-space: nowrap;
 }
 
 body {
@@ -21,6 +20,33 @@ body {
   background-size: cover;
   background-position: top right;
   background-blend-mode: multiply;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:any-link {
+  color: whitesmoke;
+}
+
+a:hover,
+a:focus-visible {
+  color: whitesmoke;
 }
 
 .icon-button {
@@ -43,9 +69,16 @@ body {
   visibility: hidden;
 }
 
-footer {
+.dash-footer {
+  text-align: center;
+  font-size: 1rem;
+  position: sticky;
   bottom: 0;
-  height: 100px;
+  z-index: 1;
+  background-color: #0F172A;
+  padding: 0.5em;
+  border-top: 1px solid #FFF;
+  gap: 1em;
 }
 
 /* public page style */
@@ -99,4 +132,8 @@ footer {
 .dash-header .icon-container button {
   border: 0px;
   background-color: #ffb6b9;
+}
+
+p{
+  color: #FFF;
 }
