--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,10 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  color: black;
+ 
   margin:0;
   height: 100%;
-  background-color: #455d7a;
-  background-image: url('./assets/img1.jpg');
-  background-size: cover;
-  background-position: top right;
-  background-blend-mode: multiply;
+  
 }
 
 input,
@@ -31,6 +26,13 @@ select {
 
 
 #root {
+  color: black;
+  font-family: 'Poppins', sans-serif;background-color: #455d7a;
+  background-image: url('./assets/img1.jpg');
+  background-size: cover;
+  background-position: top right;
+  background-blend-mode: multiply;
+
   min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
@@ -47,26 +49,6 @@ a:any-link {
 a:hover,
 a:focus-visible {
   color: whitesmoke;
-}
-
-.icon-button {
-  width: 48px;
-  height: 48px;
-  font-size: 1.5rem;
-  background-color: transparent;
-  border: none;
-  color: #FFF;
-  display: grid;
-  place-content: center;
-}
-
-.icon-button:hover,
-.icon-button:focus-visible {
-  transform: scale(1.2);
-}
-
-.icon-button[disabled] {
-  visibility: hidden;
 }
 
 .dash-footer {
@@ -112,28 +94,115 @@ a:focus-visible {
 }
 
 /* dash header style */
-.dash-header {
-  justify-content: center;
+.dash-header nav {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  background-color: #ffb6b9;
+  background: #1b2430;
+  padding: 20px 20px;
 }
 
-.dash-header .title-container {
-  flex: 3;
-  padding: 15px 5px;
+#nav-link, #title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #FFF;
-  display: inline-block;
 }
 
-.dash-header .icon-container {
-  flex: 1;
+.menu-items{
+  padding: 0px 20px;
+  position: relative;
 }
 
-.dash-header .icon-container button {
-  border: 0px;
-  background-color: #ffb6b9;
+.menu-items button{
+  display: flex;
+  align-items: center;
+}
+
+.menu-buttons {
+  font-size: 1rem;
+  font-weight: 600;
+  background: transparent;
+  border: none;
+  color: #FFF;
+}
+
+.menu-items:hover,
+.menu-items:focus-visible {
+  transform: scale(1);
+  color: #17cf97;
+}
+
+.menu-items:hover::after{
+    display: block;
+    content: '';
+    height: 2px;
+    width: 100%;
+    background: #17cf97;
+    position: relative;
+    bottom: 5px;
+}
+
+.menu-buttosn[disabled] {
+  visibility: hidden;
+}
+
+.icon-buttons{
+  font-size: 0.8rem;
+  padding-bottom: 3px;
+  padding-right: 5px;
+}
+
+#mobile,
+.toggle-button{
+  display: none;
+  color: #FFF;
 }
 
 p{
   color: #FFF;
+}
+
+#loading{
+  background-image: none;
+  height: 100vh;
+}
+
+@media screen and (max-width: 764px) {
+  #nav-link{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background: #2a3239;
+    position: fixed;
+    height: 100vh;
+    width: 50%;
+    right: -50%;
+    padding: 80px 0 0 10px;
+    top: 0px;
+    z-index: 1;
+    transition: 0.3s ease-in-out;
+  }
+  #nav-link.active{
+    right: 0;
+  }
+  .menu-items{
+    margin-bottom: 24px;
+  }
+  .toggle-button{
+    display: block;
+    padding-right: 40px;
+    position: absolute;
+    top: 1.2rem;
+    right: 0;
+    font-size: 26px;
+    cursor: pointer;
+  }
+  #mobile{
+    display: block;
+    font-size: 24px;
+    padding-right: 20px;
+    cursor: pointer;
+  }
 }
